<resources>
    <string name="app_name">Kinopoisk Search</string>
    <string name="main_title">Что сегодня посмотреть?</string>
    <string name="star_button">Избранное</string>
    <string name="film_genre">жанр</string>
    <string name="choose_country">страна</string>
    <string name="year">год</string>
    <string name="rating">рейтинг</string>
    <string name="year_pick_default">Любой</string>
    <string name="movies_only">только фильмы</string>
    <string name="cartoons_only">только мультики</string>
    <string name="search_button">Поиск</string>
    <string name="random_button">Мне повезет</string>
</resources>