<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="10sp"
        android:text="@string/main_title"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/favourite"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:scaleType="fitCenter"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:background="#00ffffff"
        android:contentDescription="@string/star_button"
        android:maxWidth="25dp"
        android:minWidth="25dp"
        android:src="@drawable/star" />

    <TextView
        android:id="@+id/film_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/film_genre"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="15dp"
        android:padding="12dp"
        app:drawableRightCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/film_genre"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/choose_country"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        app:drawableRightCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:text="@string/year" />

    <TextView
        android:id="@+id/year_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:layout_toEndOf="@+id/search_button"
        android:text="@string/year_pick_default"
        android:textAlignment="textEnd" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/year_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/year"
        android:stepSize="1"
        android:valueFrom="1930"
        android:valueTo="2022"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country"
        app:values="@array/year_slider_values" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year_range"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:text="@string/rating" />

    <TextView
        android:id="@+id/rating_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year_range"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:layout_toEndOf="@+id/search_button"
        android:text="@string/year_pick_default"
        android:textAlignment="textEnd" />

    <com.google.android.material.slider.Slider
        android:id="@+id/rating_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movies_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_slider"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:text="@string/movies_only" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/movies_only_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_slider"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp" />

    <TextView
        android:id="@+id/cartoons_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movies_only"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="29dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:text="@string/cartoons_only" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/cartoons_only_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movies_only_switch"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp" />

    <ProgressBar
        android:id="@+id/main_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/cartoons_only_switch"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/centerShim"
        android:text="@string/search_button" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/search_button"
        android:layout_alignParentEnd="true"
        android:text="@string/random_button" />
</RelativeLayout>